--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot",
-    "build": "webpack"
+    "test": "jest",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "postinstall": "webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "express": "^4.13.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
@@ -27,6 +29,9 @@
     "webpack-dev-server": "^2.3.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.0.1"
+    "babel-jest": "^21.2.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "jest": "^21.2.1",
+    "react-test-renderer": "^16.1.1"
   }
 }
