--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "babel-jest": "^21.2.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "jest": "^21.2.1",
     "react-test-renderer": "^16.1.1"
   }
